improve dark mode; animate dropdown; prevent selections

--- a/html/assets/css/choices.css
+++ b/html/assets/css/choices.css
@@ -229,7 +229,7 @@
       justify-content: space-between;
   -ms-flex-align: center;
       align-items: center;
-  box-shadow: 0px 8px 20px 0px var(--lineColor);
+  box-shadow: 0px 8px 20px 0px var(--backgroundShadow);
   border-radius: 3px;
 }
 
